# live_trading_indicators

./: .gitattributes  .gitignore  LICENSE  README.md  README_RUS.md  __init__.py  benchmark_results.md  benchmarks.ipynb  common.py  examples.ipynb  examples_show.ipynb  indicator.py  pyproject.toml  pyvenv.cfg  remarks  setup.py  show_demo.ipynb  tests_basic.py  tox.ini
.github/workflows/: codeql.yml
benchmarks/: indicators.py  ohlcv_1m_1y.py  ohlcv_1m_2y.py  ohlcv_1s_1y.py
datasources/: __init__.py  binance_ticks.py
indicators/: OHLCV.py  __init__.py
src/: examples.py  examples1.py
src/fast_trading_indicators/: __init__.py  acelerator.py  calculator.py  common.py  exceptions.py  indicator_data.py
src/live_trading_indicators/: __init__.py  calculator.py  cast_input_params.py  common.py  config.py  constants.py  exceptions.py  indicator_data.py  move_average.py  plotting.py  timeframe.py  volume_clusters.py
tests/: bad_parameters.py  common.py  common_test.py  conftest.py  profiling.py  tect_CCI.py  test_001_basic_ticks.py  test_030_common.py  test_040_bars_online.py  test_0_basic.py  test_100_SMA.py  test_101_EMA.py  test_102_RSI.py  test_103_MACD.py  test_1_basic_ticks.py  test_1d_downloads.py  test_1w_tf.py  test_21_OHLC_fix_errors.py  test_22_basic_bars.py  test_30_common.py  test_ADL.py  test_ADX.py  test_ATR.py  test_Aroon.py  test_Awesome.py  test_BollingerBands.py  test_CCI.py  test_Chandelier.py  test_EMA.py  test_EMA0.py  test_Ichimoku.py  test_Keltner.py  test_MA.py  test_MACD.py  test_MFI.py  test_OBV.py  test_OHLCVM.py  test_OHLCV_fix_errors.py  test_ROC.py  test_RSI.py  (+38 more)
tests old/: conftest.py  test_000_basic.py  test_001_basic_ticks.py  test_021_OHLC_fix_errors.py  test_022_basic_bars.py  test_030_common.py  test_040_bars_online.py  test_100_SMA.py  test_102_RSI.py
tests/data/: adl-cm_ethusd_perp-5m-2022-07-01-2022-07-05.14  adl-um_etcusdt-5m-2022-07-01-2022-07-05.2  adl-um_ethusdt-1m-2022-07-10-2022-07-15.14  adl-um_ethusdt-5m-2022-07-01-2022-07-05.14  adl-um_stmxusdt-5m-2022-07-01-2022-07-05.14  adx-btcusdt-5m-2022-07-01-2022-07-05.14  adx-cm_btcusd_perp-5m-2022-07-01-2022-07-05.14  adx-cm_etcusd_perp-5m-2022-07-01-2022-07-05.14  (+448 more)
(+56 files in other folders)
